test/classes/initializers/errors/generic-lhsInitRhsCons.good
generic-lhsInitRhsCons.chpl:14: note: Constructors have been deprecated as of Chapel 1.18. Please use initializers instead.
generic-lhsInitRhsCons.chpl:14: warning: Type 'hasConstruct' defines a constructor here
generic-lhsInitRhsCons.chpl:20: error: type mismatch in assignment from hasConstruct to hasInit(int(64))
